# glean

./: .gitignore  .todo.yml  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs  codebook.toml  flake.nix  install.sh  mise.toml
.claude/: nope.yaml  settings.local.json
.claude/commands/: commit.md
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
.issues/1/: 160-plv--benchmark-mcp-config-has-hardcoded-glean-binary-pa.md
.issues/2/: 26m-dgv--investigate-zod-optional-nullable-remaining-regres.md
.issues/3/: 3jj-lpe--deprioritize-markdown-code-examples-in-symbol-sear.md
.issues/4/: 4q3-09c--improve-glean-benchmark-results-for-opus.md
.issues/5/: 5eu-sr3--rename-matcher-trait-to-patternmatcher.md
.issues/6/: 6bd-yu5--reduce-default-expand-count-or-deprioritize-test-f.md
.issues/8/: 8zm-e4l--support-dotted-symbol-search-eg-sessionrequest.md
.issues/9/: 92m-xvs--add-file-locking-or-per-process-temp-files-for-jso.md  9yw-41s--investigate-swiftalamofire-weak-results.md
.issues/e/: ev6-226--implement-mini-eval-harness.md
.issues/i/: ijz-v2j--use-relative-paths-in-output.md  irr-1wq--port-python-benchmark-suite-to-rust.md  iw7-auf--surface-callee-info-in-search-results-for-chain-tr.md
.issues/j/: js8-zqh--rename-contextnext-to-contextcontinue.md  (+1 more)
.zed/: tasks.json
benchmark/: Cargo.toml  README.md  analyze.py  analyze_exploration.py  compare_versions.py  config.py  parse.py  run.py  run_full.sh
benchmark/fixtures/: reset.py  (+4 more)
npm/: install.js  package.json  run.js
scripts/: commit.sh  eval.sh  release.sh  update-deps.sh
src/: budget.rs  cache.rs  classify.rs  edit.rs  error.rs  format.rs  install.rs  lib.rs  main.rs  map.rs  mcp.rs  session.rs  types.rs
tests/: integration.rs
(+102 files in other folders)
